syntax = "proto3";

import "server.proto";

option java_multiple_files = true;
option java_package = "org.cloudhub.file.rpc.block";
option java_outer_classname = "DeleteBlocksProtos";

// TODO:
message DeleteBlocksRequest {
  string file_id = 1;
  optional string source = 2;
  repeated SerializedFileServer servers = 3;
}

message DeleteBlocksResponse {

}

// Delete file service.
service BlockDeleteService {
  rpc deleteBlocks(DeleteBlocksRequest) returns (DeleteBlocksResponse);
}
